优化后的添加表单

--- a/public/form.html
+++ b/public/form.html
@@ -1,3 +1,7 @@
+<fieldset>
+  <label class="block font-semibold">1. 宠物的名字</label>
+  <input type="text" name="pet_name" required class="w-full border border-gray-300 rounded p-2" placeholder="例如：米糕、小花、豆豆"/>
+</fieldset>
 <!DOCTYPE html>
 <html lang="zh">
 <head>
