--- a/public/form.html
+++ b/public/form.html
@@ -1,155 +1,179 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>宠物健康信息收集表单</title>
+  <title>宠物健康信息收集</title>
   <style>
     body {
-      font-family: "Helvetica Neue", sans-serif;
-      background-color: #f9f9f9;
-      padding: 2em;
+      font-family: "Arial", sans-serif;
       line-height: 1.6;
+      margin: 20px auto;
+      padding: 20px;
+      max-width: 700px;
+      background-color: #f9f9f9;
       color: #333;
     }
     h1 {
-      color: #2c3e50;
+      text-align: center;
+    }
+    .warning {
+      background-color: #fff3cd;
+      border: 1px solid #ffecb5;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 20px;
     }
     label {
       display: block;
-      margin: 0.8em 0 0.3em;
+      margin-top: 12px;
       font-weight: bold;
     }
     input[type="text"],
     input[type="email"],
-    textarea,
-    select {
+    input[type="date"],
+    input[type="number"],
+    textarea {
       width: 100%;
-      padding: 0.6em;
-      margin-bottom: 1em;
+      max-width: 400px;
+      padding: 8px;
+      margin-top: 5px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 4px;
     }
-    .checkbox-group label {
-      font-weight: normal;
+    .inline-input {
+      display: inline-block;
+      margin-right: 10px;
     }
-    .section {
-      margin-top: 2em;
-      padding: 1.5em;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.03);
+    .checkbox-group, .radio-group {
+      margin-top: 5px;
     }
-    .disclaimer {
-      background-color: #fff3cd;
-      padding: 1em;
-      border-left: 6px solid #ffcc00;
-      margin-bottom: 2em;
-      border-radius: 6px;
+    .form-section {
+      margin-bottom: 20px;
+    }
+    .note {
+      font-size: 0.9em;
+      color: #666;
     }
     button {
-      background: #4caf50;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #4caf50;
       color: white;
       border: none;
-      padding: 0.8em 1.5em;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
-      font-size: 1em;
     }
     button:hover {
-      background: #45a049;
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <div class="disclaimer">
-    ⚠️ <strong>重要提示</strong><br/>
-    1. 本服务由AI生成健康养护建议，<strong>不可替代专业兽医诊断</strong>。<br/>
-    2. 若宠物出现：□ 吐血/便血 □ 抽搐 □ 昏迷 □ 呼吸困难 → <strong>请立即联系宠物医院！</strong><br/>
-    3. 提交即代表您同意《用户协议》并知悉AI建议的参考性质。
+  <h1>宠物健康信息收集</h1>
+
+  <div class="warning">
+    ⚠️ <strong>重要提示</strong><br>
+    1. 本服务由 AI 生成健康养护建议，<strong>不可替代专业兽医诊断</strong>。<br>
+    2. 若宠物出现：□ 吐血/便血 □ 抽搐 □ 昏迷 □ 呼吸困难 → <strong>请立即联系宠物医院！</strong><br>
+    3. 提交即代表您同意《用户协议》并知悉 AI 建议的参考性质。
   </div>
 
-  <h1>宠物健康信息收集</h1>
-  <p><strong>请根据实际情况填写，AI将提供养护参考（不可替代兽医诊断）</strong></p>
-
   <form>
-    <div class="section">
-      <label>1. 宠物的名字：</label>
-      <input type="text" name="pet_name" required />
+    <div class="form-section">
+      <label for="petName">1. 宠物的名字：</label>
+      <input type="text" id="petName" name="petName" />
+    </div>
 
+    <div class="form-section">
       <label>2. 宠物类型：</label>
-      <input type="text" name="pet_type" placeholder="狗、猫或其他" required />
+      <input type="text" name="petType" />
+    </div>
 
+    <div class="form-section">
       <label>3. 年龄：</label>
-      <input type="text" name="age" placeholder="如：2岁" required />
+      <input type="text" name="petAge" />
+    </div>
 
+    <div class="form-section">
       <label>4. 性别：</label>
-      <select name="gender" required>
-        <option value="">请选择</option>
-        <option>公</option>
-        <option>母</option>
-        <option>已绝育</option>
-      </select>
-
-      <label>5. 疫苗情况：</label>
-      <select name="vaccine_status" required>
-        <option value="">请选择</option>
-        <option>未接种</option>
-        <option>部分接种</option>
-        <option>完整接种</option>
-      </select>
-
-      <label>6. 最后一次驱虫日期：</label>
-      <input type="text" name="deworm_date" placeholder="如：2025-07-01" required />
-
-      <label>7. 近期接触史（可多选）：</label>
-      <div class="checkbox-group">
-        <label><input type="checkbox" name="contact_history" value="陌生动物"> 接触陌生动物</label>
-        <label><input type="checkbox" name="contact_history" value="环境变化"> 环境变化（搬家/寄养）</label>
-        <label><input type="checkbox" name="contact_history" value="多宠家庭"> 多宠家庭</label>
-        <label><input type="checkbox" name="contact_history" value="无"> 无</label>
-      </div>
-
-      <label>8. 观察到的情况（可多选）：</label>
-      <p><em>请描述现象，AI将提供护理参考</em></p>
-      <div class="checkbox-group">
-        <label><input type="checkbox" name="symptoms" value="腹泻"> 软便/腹泻</label>
-        <label><input type="checkbox" name="symptoms" value="呕吐"> 呕吐</label>
-        <label><input type="checkbox" name="symptoms" value="食欲下降"> 食欲下降</label>
-        <label><input type="checkbox" name="symptoms" value="排便困难"> 排便困难</label>
-        <label><input type="checkbox" name="symptoms" value="呼吸异常"> 呼吸道异常（咳嗽/打喷嚏）</label>
-        <label><input type="checkbox" name="symptoms" value="精神萎靡"> 精神萎靡</label>
-        <label><input type="checkbox" name="symptoms" value="皮肤问题"> 皮肤红肿/脱毛</label>
-        <label><input type="checkbox" name="symptoms" value="其他"> 其他</label>
-      </div>
-
-      <label>9. 症状持续时间：</label>
-      <input type="text" name="duration" placeholder="如：2天3小时" required />
-
-      <label>10. 最近48小时饮食：</label>
-      <textarea name="diet_detail" rows="2" placeholder="吃过什么特殊食物？" required></textarea>
-
-      <label>11. 已采取的措施：</label>
-      <textarea name="actions_taken" rows="2" placeholder="如：停食12小时、喂益生菌" required></textarea>
-
-      <label>12. 照片补充（可选）：</label>
-      <input type="file" name="photo" accept="image/*" />
-
-      <label>13. 接收建议方式：</label>
-      <div>
-        <label><input type="radio" name="contact_method" value="wechat" required> 微信（强推及时接收预警）</label><br/>
-        微信号：<input type="text" name="wechat_id" />
-      </div>
-      <br/>
-      <div>
-        <label><input type="radio" name="contact_method" value="email" required> 邮箱</label><br/>
-        邮箱地址：<input type="email" name="email" required />
+      <div class="radio-group">
+        <label><input type="radio" name="sex" value="公"> 公</label>
+        <label><input type="radio" name="sex" value="母"> 母</label>
+        <label><input type="radio" name="sex" value="已绝育"> 已绝育</label>
       </div>
     </div>
 
-    <br/>
+    <div class="form-section">
+      <label>5. 疫苗情况：</label>
+      <div class="radio-group">
+        <label><input type="radio" name="vaccine" value="未接种"> 未接种</label>
+        <label><input type="radio" name="vaccine" value="部分接种"> 部分接种</label>
+        <label><input type="radio" name="vaccine" value="完整接种"> 完整接种</label>
+      </div>
+    </div>
+
+    <div class="form-section">
+      <label>6. 最后一次驱虫日期：</label>
+      <input type="text" name="dewormDate" placeholder="例如：2025-06-01" />
+    </div>
+
+    <div class="form-section">
+      <label>7. 近期接触史（可多选）：</label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="contact[]" value="陌生动物"> 接触陌生动物</label><br>
+        <label><input type="checkbox" name="contact[]" value="环境变化"> 环境变化（搬家/寄养）</label><br>
+        <label><input type="checkbox" name="contact[]" value="多宠家庭"> 多宠家庭</label><br>
+        <label><input type="checkbox" name="contact[]" value="无"> 无</label>
+      </div>
+    </div>
+
+    <div class="form-section">
+      <label>8. 观察到的情况（可多选）：</label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="symptom[]" value="腹泻"> 软便/腹泻</label><br>
+        <label><input type="checkbox" name="symptom[]" value="呕吐"> 呕吐</label><br>
+        <label><input type="checkbox" name="symptom[]" value="食欲下降"> 食欲下降</label><br>
+        <label><input type="checkbox" name="symptom[]" value="排便困难"> 排便困难</label><br>
+        <label><input type="checkbox" name="symptom[]" value="呼吸道异常"> 呼吸道异常（咳嗽/打喷嚏）</label><br>
+        <label><input type="checkbox" name="symptom[]" value="精神萎靡"> 精神萎靡</label><br>
+        <label><input type="checkbox" name="symptom[]" value="皮肤异常"> 皮肤红肿/脱毛</label><br>
+        <label><input type="checkbox" name="symptom[]" value="其他"> 其他：<input type="text" name="symptomOther" style="max-width: 200px;" /></label>
+      </div>
+      <div class="note">（请尽量描述观察到的现象，AI 将提供护理参考）</div>
+    </div>
+
+    <div class="form-section">
+      <label>9. 症状持续时间：</label>
+      <input type="text" name="duration" placeholder="例如：2天6小时" />
+    </div>
+
+    <div class="form-section">
+      <label>10. 最近48小时饮食：</label>
+      <input type="text" name="diet" placeholder="吃过什么特殊食物？" />
+    </div>
+
+    <div class="form-section">
+      <label>11. 已采取的措施：</label>
+      <textarea name="measures" rows="3" placeholder="例如：停食12小时、喂益生菌"></textarea>
+    </div>
+
+    <div class="form-section">
+      <label>12. 照片补充：</label>
+      <input type="file" name="photo" />
+      <div class="note">（非必传，但有助于分析）</div>
+    </div>
+
+    <div class="form-section">
+      <label>13. 接收建议方式（至少填写一项）：</label>
+      <label><input type="radio" name="receive" value="wechat"> 微信（强推及时接收预警）</label><br>
+      微信号：<input type="text" name="wechatId" style="max-width: 300px;"><br><br>
+      <label><input type="radio" name="receive" value="email"> 邮箱</label><br>
+      邮箱地址：<input type="email" name="email" required style="max-width: 300px;">
+    </div>
+
     <button type="submit">提交信息</button>
   </form>
 </body>
 </html>
-
