宠物健康档案

--- a/public/form.html
+++ b/public/form.html
@@ -2,178 +2,176 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>宠物健康信息收集</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>宠物AI健康申报表</title>
   <style>
     body {
-      font-family: "Arial", sans-serif;
-      line-height: 1.6;
-      margin: 20px auto;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f8f8;
+      margin: 0;
       padding: 20px;
-      max-width: 700px;
-      background-color: #f9f9f9;
-      color: #333;
+      line-height: 1.6;
     }
-    h1 {
-      text-align: center;
+    form {
+      background-color: #fff;
+      padding: 24px;
+      border-radius: 12px;
+      max-width: 720px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    .warning {
-      background-color: #fff3cd;
-      border: 1px solid #ffecb5;
-      padding: 15px;
-      border-radius: 5px;
-      margin-bottom: 20px;
+    h3 {
+      color: #d9534f;
+      margin-top: 1.5em;
     }
-    label {
+    label, textarea, input[type="text"], input[type="email"] {
       display: block;
-      margin-top: 12px;
-      font-weight: bold;
-    }
-    input[type="text"],
-    input[type="email"],
-    input[type="date"],
-    input[type="number"],
-    textarea {
       width: 100%;
-      max-width: 400px;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      margin: 8px 0;
+      font-size: 14px;
     }
-    .inline-input {
-      display: inline-block;
-      margin-right: 10px;
+    .section {
+      margin-top: 24px;
     }
-    .checkbox-group, .radio-group {
-      margin-top: 5px;
+    .small {
+      font-size: 12px;
+      color: gray;
     }
-    .form-section {
-      margin-bottom: 20px;
+    .grid-3 {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 10px;
     }
-    .note {
-      font-size: 0.9em;
-      color: #666;
+    .grid-2 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
     }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #4caf50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
+    .agreement {
+      background-color: #f2f2f2;
+      border-left: 4px solid #d9534f;
+      padding: 12px;
+      font-size: 14px;
+      margin-top: 24px;
     }
-    button:hover {
-      background-color: #45a049;
+    .checkbox-label {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px;
+    }
+    .checkbox-label input {
+      margin-right: 8px;
     }
   </style>
 </head>
 <body>
-  <h1>宠物健康信息收集</h1>
-
-  <div class="warning">
-    ⚠️ <strong>重要提示</strong><br>
-    1. 本服务由 AI 生成健康养护建议，<strong>不可替代专业兽医诊断</strong>。<br>
-    2. 若宠物出现：□ 吐血/便血 □ 抽搐 □ 昏迷 □ 呼吸困难 → <strong>请立即联系宠物医院！</strong><br>
-    3. 提交即代表您同意《用户协议》并知悉 AI 建议的参考性质。
-  </div>
-
   <form>
-    <div class="form-section">
-      <label for="petName">1. 宠物的名字：</label>
-      <input type="text" id="petName" name="petName" />
+    <h3>⚠️ 健康申报声明</h3>
+    <div class="section">
+      <p>1. 请先确认：□ 牙龈苍白 □ 腹部肿胀 □ 无法站立 □ 尿血/尿闭 → 出现请立即就医！</p>
+      <p>2. 本服务由 AI 生成健康养护参考，<strong>不可替代兽医诊断</strong></p>
+      <p>3. 提交即代表同意《用户协议》</p>
     </div>
 
-    <div class="form-section">
-      <label>2. 宠物类型：</label>
-      <input type="text" name="petType" />
-    </div>
-
-    <div class="form-section">
-      <label>3. 年龄：</label>
-      <input type="text" name="petAge" />
-    </div>
-
-    <div class="form-section">
-      <label>4. 性别：</label>
-      <div class="radio-group">
-        <label><input type="radio" name="sex" value="公"> 公</label>
-        <label><input type="radio" name="sex" value="母"> 母</label>
-        <label><input type="radio" name="sex" value="已绝育"> 已绝育</label>
+    <div class="section">
+      <h4>宠物健康档案</h4>
+      <label>1. 宠物的名字：<input type="text" name="name"></label>
+      <label>2. 宠物类型：<input type="text" name="species"></label>
+      <div class="grid-2">
+        <label>3. 年龄（岁）：<input type="text" name="age_year"></label>
+        <label>年龄（月）：<input type="text" name="age_month"></label>
+      </div>
+      <label>4. 性别：○ 公 ○ 母 ○ 已绝育</label>
+      <label>5. 体重范围：○ <5kg ○ 5-10kg ○ >10kg</label>
+      <label>6. 疫苗情况：○ 未接种 ○ 部分接种 ○ 完整接种</label>
+      <label>7. 最后一次驱虫日期：<input type="text" name="deworm_date"></label>
+      <label>8. 最近7天是否用药？ ○ 否（默认） ○ 是（药名：<input type="text" name="medicine">）</label>
+      <label>9. 近期接触史：</label>
+      <div class="grid-2">
+        <label class="checkbox-label"><input type="checkbox"> 接触陌生动物</label>
+        <label class="checkbox-label"><input type="checkbox"> 环境变化（搬家/寄养）</label>
+        <label class="checkbox-label"><input type="checkbox"> 多宠家庭</label>
+        <label class="checkbox-label"><input type="checkbox"> 无</label>
       </div>
     </div>
 
-    <div class="form-section">
-      <label>5. 疫苗情况：</label>
-      <div class="radio-group">
-        <label><input type="radio" name="vaccine" value="未接种"> 未接种</label>
-        <label><input type="radio" name="vaccine" value="部分接种"> 部分接种</label>
-        <label><input type="radio" name="vaccine" value="完整接种"> 完整接种</label>
+    <div class="section">
+      <h4>健康观察</h4>
+      <label>10. 观察到的情况：</label>
+      <label class="checkbox-label"><input type="checkbox"> 软便/腹泻
+        <span style="margin-left:1em">排泄物状态：□ 水样 □ 黏液 □ 带血</span>
+      </label>
+      <label class="checkbox-label"><input type="checkbox"> 呕吐（频率：○ 首次 ○ 偶尔 ○ 频繁）</label>
+      <label class="checkbox-label"><input type="checkbox"> 食欲下降</label>
+      <label class="checkbox-label"><input type="checkbox"> 排便困难</label>
+      <label class="checkbox-label"><input type="checkbox"> 呼吸道异常（咳嗽/打喷嚏）</label>
+      <label class="checkbox-label"><input type="checkbox"> 精神萎靡</label>
+      <label class="checkbox-label"><input type="checkbox"> 皮肤红肿/脱毛</label>
+      <label class="checkbox-label"><input type="checkbox"> 其他：<input type="text" name="other_symptom"></label>
+      <div class="grid-2">
+        <label>11. 症状持续时间：<input type="text" name="duration"></label>
+        <label>12. 症状发生频率（默认“首次出现”）：○ 首次出现 ○ 偶尔 ○ 频繁</label>
       </div>
+      <label>13. 最近48小时饮食：<textarea rows="2"></textarea></label>
     </div>
 
-    <div class="form-section">
-      <label>6. 最后一次驱虫日期：</label>
-      <input type="text" name="dewormDate" placeholder="例如：2025-06-01" />
+    <div class="section">
+      <h4>养护记录</h4>
+      <label>14. 已采取的措施：</label>
+      <label class="checkbox-label"><input type="checkbox"> 停食（时长：<input type="text" name="fast_hours" style="width:60px"> 小时）</label>
+      <label class="checkbox-label"><input type="checkbox"> 更换水源</label>
+      <label class="checkbox-label"><input type="checkbox"> 环境清洁</label>
+      <label class="checkbox-label"><input type="checkbox"> 使用非处方保健品（名称：<input type="text" name="supplement">）</label>
+      <label class="checkbox-label"><input type="checkbox"> 其他：<input type="text" name="other_action"></label>
+      <label>15. 照片补充（非必传）：<input type="file"></label>
     </div>
 
-    <div class="form-section">
-      <label>7. 近期接触史（可多选）：</label>
-      <div class="checkbox-group">
-        <label><input type="checkbox" name="contact[]" value="陌生动物"> 接触陌生动物</label><br>
-        <label><input type="checkbox" name="contact[]" value="环境变化"> 环境变化（搬家/寄养）</label><br>
-        <label><input type="checkbox" name="contact[]" value="多宠家庭"> 多宠家庭</label><br>
-        <label><input type="checkbox" name="contact[]" value="无"> 无</label>
-      </div>
+    <div class="section">
+      <h4>报告接收</h4>
+      <label>16. 接收建议方式（至少一项）</label>
+      <label>○ 微信 → 微信号：<input type="text" name="wechat"></label>
+      <label>○ 邮箱 → <input type="email" name="email" required></label>
     </div>
 
-    <div class="form-section">
-      <label>8. 观察到的情况（可多选）：</label>
-      <div class="checkbox-group">
-        <label><input type="checkbox" name="symptom[]" value="腹泻"> 软便/腹泻</label><br>
-        <label><input type="checkbox" name="symptom[]" value="呕吐"> 呕吐</label><br>
-        <label><input type="checkbox" name="symptom[]" value="食欲下降"> 食欲下降</label><br>
-        <label><input type="checkbox" name="symptom[]" value="排便困难"> 排便困难</label><br>
-        <label><input type="checkbox" name="symptom[]" value="呼吸道异常"> 呼吸道异常（咳嗽/打喷嚏）</label><br>
-        <label><input type="checkbox" name="symptom[]" value="精神萎靡"> 精神萎靡</label><br>
-        <label><input type="checkbox" name="symptom[]" value="皮肤异常"> 皮肤红肿/脱毛</label><br>
-        <label><input type="checkbox" name="symptom[]" value="其他"> 其他：<input type="text" name="symptomOther" style="max-width: 200px;" /></label>
-      </div>
-      <div class="note">（请尽量描述观察到的现象，AI 将提供护理参考）</div>
+    <div class="agreement">
+      ✅ 您确认：<br>
+      1. 宠物无声明中的危急症状<br>
+      2. 未自行使用处方药<br>
+      3. 知悉AI建议的参考性质
     </div>
 
-    <div class="form-section">
-      <label>9. 症状持续时间：</label>
-      <input type="text" name="duration" placeholder="例如：2天6小时" />
+    <div class="section">
+      <h4>《AI宠物健康顾问服务使用协议》</h4>
+      <p>生效日期：______年______月______日</p>
+      <p><strong>一、服务性质声明</strong><br>
+        本服务由AI生成宠物健康养护建议，不具备医疗诊断属性。若宠物出现危急症状或建议无效，您应及时就医。</p>
+      <p><strong>二、用户义务与限制</strong><br>
+        - 保证信息真实准确<br>
+        - 禁止用于濒危动物/传播建议截图/未成年人独立使用</p>
+      <p><strong>三、平台免责条款</strong><br>
+        - 用户行为或不可抗力造成的问题平台免责</p>
+      <p><strong>四、知识产权与数据授权</strong><br>
+        - 上传内容归用户所有<br>
+        - 匿名化用于改进AI服务</p>
+      <p><strong>五、隐私保护</strong><br>
+        - 联系方式加密，健康数据最长保存72小时（免费）</p>
+      <p><strong>六、协议更新与终止</strong><br>
+        - 协议变更公告于官网，严重违规可终止服务</p>
     </div>
 
-    <div class="form-section">
-      <label>10. 最近48小时饮食：</label>
-      <input type="text" name="diet" placeholder="吃过什么特殊食物？" />
-    </div>
+    <label class="checkbox-label">
+      <input type="checkbox" required>
+      我已阅读并同意《用户协议》，确认：<br>
+      1. 我的宠物未出现协议禁止的危急症状<br>
+      2. 我知悉AI建议的参考性质及自身责任<br>
+      3. 我授权平台在匿名化前提下使用数据改进服务
+    </label>
 
-    <div class="form-section">
-      <label>11. 已采取的措施：</label>
-      <textarea name="measures" rows="3" placeholder="例如：停食12小时、喂益生菌"></textarea>
+    <div style="margin-top: 20px; text-align:center">
+      <button type="submit" style="padding: 10px 20px; font-size: 16px; border:none; background:#28a745; color:white; border-radius: 6px; cursor:pointer;">提交表单</button>
     </div>
-
-    <div class="form-section">
-      <label>12. 照片补充：</label>
-      <input type="file" name="photo" />
-      <div class="note">（非必传，但有助于分析）</div>
-    </div>
-
-    <div class="form-section">
-      <label>13. 接收建议方式（至少填写一项）：</label>
-      <label><input type="radio" name="receive" value="wechat"> 微信（强推及时接收预警）</label><br>
-      微信号：<input type="text" name="wechatId" style="max-width: 300px;"><br><br>
-      <label><input type="radio" name="receive" value="email"> 邮箱</label><br>
-      邮箱地址：<input type="email" name="email" required style="max-width: 300px;">
-    </div>
-
-    <button type="submit">提交信息</button>
   </form>
 </body>
 </html>
+
+
