--- a/public/form.html
+++ b/public/form.html
@@ -11,7 +11,6 @@
       background-color: #f9f9f9;
       line-height: 1.6;
     }
-
     .container {
       max-width: 700px;
       margin: auto;
@@ -20,12 +19,10 @@
       padding: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-
     h1 {
       text-align: center;
       color: #333;
     }
-
     .warning {
       background-color: #fff3cd;
       border-left: 6px solid #ffa500;
@@ -33,14 +30,12 @@
       margin-bottom: 20px;
       font-size: 15px;
     }
-
     label {
       display: block;
       margin-top: 15px;
       font-weight: bold;
       color: #333;
     }
-
     input[type="text"],
     input[type="email"],
     input[type="number"],
@@ -51,37 +46,31 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
-
     .checkbox-group,
     .radio-group {
       margin-top: 10px;
       padding-left: 20px;
     }
-
     .checkbox-group label,
     .radio-group label {
       display: block;
       font-weight: normal;
     }
-
     .small-input {
       width: 120px;
       display: inline-block;
       margin-right: 10px;
     }
-
     .agreement {
       margin-top: 30px;
       border-top: 1px solid #ccc;
       padding-top: 20px;
     }
-
     summary {
       cursor: pointer;
       color: #007bff;
       font-weight: bold;
     }
-
     .submit-button {
       margin-top: 20px;
       background-color: #4CAF50;
@@ -93,7 +82,6 @@
       font-size: 16px;
       width: 100%;
     }
-
     .submit-button:hover {
       background-color: #45a049;
     }
@@ -110,8 +98,6 @@
 
     <h1>宠物健康档案</h1>
     <form id="petForm" action="/api/submit" method="POST" enctype="multipart/form-data">
-  <!-- 表单内容 -->
-</form>
 
       <label>1. 宠物的名字：</label>
       <input type="text" name="name" required />
@@ -197,33 +183,41 @@
         </details>
       </div>
 
+      <label class="checkbox-label">
+        <input type="checkbox" required />
+        我已阅读并同意《用户协议》，确认：<br />
+        1. 我的宠物未出现协议禁止的危急症状<br />
+        2. 我知悉AI建议的参考性质及自身责任<br />
+        3. 我授权平台在匿名化前提下使用数据改进服务
+      </label>
+
       <button type="submit" class="submit-button">提交信息</button>
     </form>
-   
+  </div>
 
-  </div> 
   <script>
-  document.getElementById("petForm").addEventListener("submit", async function(e) {
-    e.preventDefault(); // 阻止默认表单提交行为
+    document.getElementById("petForm").addEventListener("submit", async function(e) {
+      e.preventDefault(); // 阻止默认表单提交行为
 
-    const form = e.target;
-    const formData = new FormData(form);
+      const form = e.target;
+      const formData = new FormData(form);
 
-    try {
-      const response = await fetch(form.action, {
-        method: form.method,
-        body: formData
-      });
+      try {
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: formData
+        });
 
-      if (response.ok) {
-        window.location.href = "thanks.html";  // ✅ 成功后跳转到感谢页面
-      } else {
-        alert("提交失败，请稍后重试");
+        if (response.ok) {
+          window.location.href = "thanks.html";  // ✅ 成功后跳转到感谢页面
+        } else {
+          alert("提交失败，请稍后重试");
+        }
+      } catch (error) {
+        alert("网络错误，请检查连接");
       }
-    } catch (error) {
-      alert("网络错误，请检查连接");
-    }
-  });
-</script>
+    });
+  </script>
 </body>
 </html>
+
